# Mono-host-meet

./: .gitignore  01-可迁移实现规格书 copy.md  01-可迁移实现规格书.md  03-QML-LiveKitCppSDK落地方案 copy.md  03-QML-LiveKitCppSDK落地方案.md  CLAUDE.md  CMakeLists.txt  README.md
cmake/: LiveKitSDK.cmake
src/: main.cpp
src/app/: app_context.cpp  app_context.h  env_config.cpp  env_config.h
src/domain/services/: backend_service.h  device_service.h  room_service.h
src/infra/device/: device_service_qt.cpp  device_service_qt.h
src/infra/http/: backend_service_qt.cpp  backend_service_qt.h
src/infra/rtc/: livekit_room_service.cpp  livekit_room_service.h
src/presentation/controllers/: home_controller.cpp  home_controller.h  prejoin_controller.cpp  prejoin_controller.h  room_controller.cpp  room_controller.h  video_tile_model.cpp  video_tile_model.h
src/presentation/qml/: App.qml  frame_image_provider.cpp  frame_image_provider.h
src/presentation/qml/pages/: HomePage.qml
src/tools/: device_probe_main.cpp
